commit 2303cda0bc770b847a7542b8c55c83027fb99dc6
Author: Frédéric D'HAEYER <frederic.dhaeyer@parrot.com>
Date:   Thu May 31 17:16:32 2012 +0200

    Add instruction to compile and to generate documentation.

commit d87087f3da3ee15b5a30c0d3ca49342110cf3bf2
Author: Frédéric D'HAEYER <frederic.dhaeyer@parrot.com>
Date:   Thu May 31 17:11:33 2012 +0200

    Doxygen support added and bug fix.

commit 61f06c40977eba00fb6c934a2d27f7c6c7520cb7
Author: Frédéric D'HAEYER <frederic.dhaeyer@parrot.com>
Date:   Thu May 31 16:27:27 2012 +0200

    Remove useless file.

commit d3e9bf45cd5080b1342f0289f5bee275d475bdde
Author: Frédéric D'HAEYER <frederic.dhaeyer@parrot.com>
Date:   Thu May 31 16:24:32 2012 +0200

    Add cleanup cript to clean autotools temporary files.

commit 66e7e27b8979afa913afdbe7dec649991b512de1
Author: Frédéric D'HAEYER <frederic.dhaeyer@parrot.com>
Date:   Thu May 31 16:14:45 2012 +0200

    Some changes.

commit f9439fb297768b418fd23cbf31b245cf5ea194cc
Author: Frédéric D'HAEYER <frederic.dhaeyer@parrot.com>
Date:   Thu May 31 16:14:01 2012 +0200

    Remove autogen.sh

commit 8c0c119cf644fcb003b562fbb5b0eaec110b4d36
Author: Frédéric D'HAEYER <frederic.dhaeyer@parrot.com>
Date:   Thu May 31 16:13:19 2012 +0200

    Add doxygen management.
    Chnage autogen.sh to bootstrap.

commit d975528a3cf07766d680e00b1641fca7b31ede71
Author: Frédéric D'HAEYER <frederic.dhaeyer@parrot.com>
Date:   Thu May 31 09:34:53 2012 +0200

    Add test C file.

commit 88a53ce843a1cbbcb683483d1649b2743e581ffb
Author: Frédéric D'HAEYER <frederic.dhaeyer@parrot.com>
Date:   Wed May 30 18:08:29 2012 +0200

    Some changes.

commit 9fbbd4e9f3afa0c3232e35b297f6546b77065a21
Author: Frédéric D'HAEYER <frederic.dhaeyer@parrot.com>
Date:   Wed May 30 18:07:46 2012 +0200

    Some changes.

commit c1975941d2244448fc14d3ec7514ca5218958fdf
Author: Frédéric D'HAEYER <frederic.dhaeyer@parrot.com>
Date:   Wed May 30 18:06:08 2012 +0200

    Implement thread mutex and condition functions.
