@@ -82,12 +82,18 @@ $(document).ready(initResizable);
 <li>sal_mutex_unlock()
 : <a class="el" href="mutex_8h.html#a6ffe1fc49588225708a0f1a37e83c83f">mutex.h</a>
 </li>
+<li>sal_thread_destroy()
+: <a class="el" href="thread_8h.html#a89021a847ab9a854a2b0377a08914de6">thread.h</a>
+</li>
+<li>sal_thread_join()
+: <a class="el" href="thread_8h.html#ab6850b322b6b1109c176877346a32c45">thread.h</a>
+</li>
 </ul>
 </div>
 </div>
   <div id="nav-path" class="navpath">
     <ul>
-      <li class="footer">Generated on Thu May 31 2012 17:31:29 for libSAL by&#160;
+      <li class="footer">Generated on Thu May 31 2012 18:35:19 for libSAL by&#160;
 <a href="http://www.doxygen.org/index.html">
 <img class="footer" src="doxygen.png" alt="doxygen"/></a> 1.7.4 </li>
     </ul>
