@@ -64,17 +64,21 @@ $(document).ready(initResizable);
 <a name="l00009"></a>00009 <span class="preprocessor"></span><span class="preprocessor">#define _THREAD_H_</span>
 <a name="l00010"></a>00010 <span class="preprocessor"></span>
 <a name="l00011"></a>00011 <span class="keyword">typedef</span> <span class="keywordtype">void</span>* sal_thread_t;
-<a name="l00012"></a>00012 <span class="keyword">typedef</span> <span class="keywordtype">void</span>* sal_thread_param_t;
-<a name="l00013"></a>00013 <span class="keyword">typedef</span> <span class="keywordtype">void</span>* (*sal_thread_routine) (sal_thread_param_t);
-<a name="l00014"></a>00014 
-<a name="l00015"></a>00015 <span class="preprocessor">#endif // _THREAD_H_</span>
-<a name="l00016"></a>00016 <span class="preprocessor"></span>
+<a name="l00012"></a>00012 <span class="keyword">typedef</span> <span class="keywordtype">void</span>* (*sal_thread_routine) (<span class="keywordtype">void</span> *);
+<a name="l00013"></a>00013 
+<a name="l00023"></a>00023 <span class="keywordtype">int</span> sal_thread_create(sal_thread_t *thread, sal_thread_routine routine, <span class="keywordtype">void</span> *arg);
+<a name="l00024"></a>00024 
+<a name="l00033"></a>00033 <span class="keywordtype">int</span> <a class="code" href="thread_8h.html#ab6850b322b6b1109c176877346a32c45" title="Join a thread.">sal_thread_join</a>(sal_thread_t thread, <span class="keywordtype">void</span> **retval);
+<a name="l00034"></a>00034 
+<a name="l00042"></a>00042 <span class="keywordtype">int</span> <a class="code" href="thread_8h.html#a89021a847ab9a854a2b0377a08914de6" title="Destroy a thread.">sal_thread_destroy</a>(sal_thread_t *thread);
+<a name="l00043"></a>00043 
+<a name="l00044"></a>00044 <span class="preprocessor">#endif // _THREAD_H_</span>
 </pre></div></div>
 </div>
   <div id="nav-path" class="navpath">
     <ul>
       <li class="navelem"><a class="el" href="thread_8h.html">thread.h</a>      </li>
-      <li class="footer">Generated on Thu May 31 2012 17:31:29 for libSAL by&#160;
+      <li class="footer">Generated on Thu May 31 2012 18:35:19 for libSAL by&#160;
 <a href="http://www.doxygen.org/index.html">
 <img class="footer" src="doxygen.png" alt="doxygen"/></a> 1.7.4 </li>
     </ul>
