@@ -89,7 +89,7 @@ $(document).ready(initResizable);
   <div id="nav-path" class="navpath">
     <ul>
       <li class="navelem"><a class="el" href="time_8h.html">time.h</a>      </li>
-      <li class="footer">Generated on Thu May 31 2012 17:31:29 for libSAL by&#160;
+      <li class="footer">Generated on Thu May 31 2012 18:35:19 for libSAL by&#160;
 <a href="http://www.doxygen.org/index.html">
 <img class="footer" src="doxygen.png" alt="doxygen"/></a> 1.7.4 </li>
     </ul>
