@@ -11,12 +11,19 @@ This file contains headers about thread abstraction layer.
 typedef void $\ast$ {\bfseries sal\_\-thread\_\-t}\label{thread_8h_a0e586c8fa470863d8cb2fc0796df3bd0}
 
 \item 
-typedef void $\ast$ {\bfseries sal\_\-thread\_\-param\_\-t}\label{thread_8h_abede0e14e149c3fa1b0539b371d06d9b}
-
-\item 
-typedef void $\ast$($\ast$ {\bfseries sal\_\-thread\_\-routine} )(sal\_\-thread\_\-param\_\-t)\label{thread_8h_a68aa11e7b0505f27ba84bbe3857b08b6}
+typedef void $\ast$($\ast$ {\bfseries sal\_\-thread\_\-routine} )(void $\ast$)\label{thread_8h_afbceb50e62eecc75c97989f3457d826f}
 
 \end{DoxyCompactItemize}
+\subsection*{Functions}
+\begin{DoxyCompactItemize}
+\item 
+int {\bfseries sal\_\-thread\_\-create} (sal\_\-thread\_\-t $\ast$thread, sal\_\-thread\_\-routine routine, void $\ast$arg)\label{thread_8h_a754f6b28e73a64799d117b3927588c27}
+
+\item 
+int {\bf sal\_\-thread\_\-join} (sal\_\-thread\_\-t thread, void $\ast$$\ast$retval)
+\begin{DoxyCompactList}\small\item\em Join a thread. \end{DoxyCompactList}\item 
+int {\bf sal\_\-thread\_\-destroy} (sal\_\-thread\_\-t $\ast$thread)
+\begin{DoxyCompactList}\small\item\em Destroy a thread. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \subsection{Detailed Description}
@@ -26,3 +33,51 @@ This file contains headers about thread abstraction layer. \begin{DoxyDate}{Date
 \begin{DoxyAuthor}{Author}
 {\tt frederic.dhaeyer@parrot.com} 
 \end{DoxyAuthor}
+
+
+\subsection{Function Documentation}
+\index{thread.h@{thread.h}!sal\_\-thread\_\-destroy@{sal\_\-thread\_\-destroy}}
+\index{sal\_\-thread\_\-destroy@{sal\_\-thread\_\-destroy}!thread.h@{thread.h}}
+\subsubsection[{sal\_\-thread\_\-destroy}]{\setlength{\rightskip}{0pt plus 5cm}int sal\_\-thread\_\-destroy (
+\begin{DoxyParamCaption}
+\item[{sal\_\-thread\_\-t $\ast$}]{thread}
+\end{DoxyParamCaption}
+)}\label{thread_8h_a89021a847ab9a854a2b0377a08914de6}
+
+
+Destroy a thread. 
+
+
+\begin{DoxyParams}{Parameters}
+{\em thread} & The thread to destroy \\
+\hline
+\end{DoxyParams}
+
+\begin{DoxyRetVals}{Return values}
+{\em On} & success, sal\_\-thread\_\-create() returns 0. Otherwise, it returns an error number (See errno.h) \\
+\hline
+\end{DoxyRetVals}
+\index{thread.h@{thread.h}!sal\_\-thread\_\-join@{sal\_\-thread\_\-join}}
+\index{sal\_\-thread\_\-join@{sal\_\-thread\_\-join}!thread.h@{thread.h}}
+\subsubsection[{sal\_\-thread\_\-join}]{\setlength{\rightskip}{0pt plus 5cm}int sal\_\-thread\_\-join (
+\begin{DoxyParamCaption}
+\item[{sal\_\-thread\_\-t}]{thread, }
+\item[{void $\ast$$\ast$}]{retval}
+\end{DoxyParamCaption}
+)}\label{thread_8h_ab6850b322b6b1109c176877346a32c45}
+
+
+Join a thread. 
+
+
+\begin{DoxyParams}{Parameters}
+{\em thread} & The thread to join \\
+\hline
+{\em retval} & If this pointer is not NULL, the exit status is placed into $\ast$retval \\
+\hline
+\end{DoxyParams}
+
+\begin{DoxyRetVals}{Return values}
+{\em On} & success, \doxyref{sal\_\-thread\_\-join()}{p.}{thread_8h_ab6850b322b6b1109c176877346a32c45} returns 0. Otherwise, it returns an error number (See errno.h) \\
+\hline
+\end{DoxyRetVals}
