@@ -1,11 +1,32 @@
 #include <stdio.h>
 #include <libSAL/mutex.h>
+#include <libSAL/thread.h>
+
+sal_mutex_t mutex;
+sal_cond_t cond;
+int variable = 0;
+
+void *routine(void *arg)
+{
+	int i = 0;
+	printf("Routine started\n");
+	printf("mutex lock\n");
+	sal_mutex_lock(&mutex);
+	variable = 1;
+	printf("mutex signal\n");
+	sal_cond_signal(&cond);
+	printf("mutex unlock\n");
+	sal_mutex_unlock(&mutex);
+
+	while(i++ < 10)
+		sleep(1);
+
+	return NULL;
+}
 
 int main(int argc, char **argv)
 {
-	int variable = 0;
-	sal_mutex_t mutex;
-	sal_cond_t cond;
+	sal_thread_t thread;
 
 	printf("mutex init\n");
 	sal_mutex_init(&mutex);
@@ -13,19 +34,22 @@ int main(int argc, char **argv)
 	printf("condition init\n");
 	sal_cond_init(&cond);
 
+	printf("thread create\n");
+	sal_thread_create(&thread, routine, NULL);
+
+	printf("Thread : %p, variable : %d\n", thread, variable);
+
+	sal_thread_join(thread, NULL);
+
 	printf("mutex lock\n");
 	sal_mutex_lock(&mutex);
+	printf("mutex wait\n");
 	sal_cond_timedwait(&cond, &mutex, 1000);
 	//sal_cond_wait(&cond, &mutex);
-	variable = 1;
 	printf("mutex unlock\n");
 	sal_mutex_unlock(&mutex);
 
-	printf("mutex trylock\n");
-	sal_mutex_trylock(&mutex);
-	variable = 1;
-	printf("mutex unlock\n");
-	sal_mutex_unlock(&mutex);
+	printf("Thread : %p, variable : %d\n", thread, variable);
 
 	printf("condition destroy\n");
 	sal_cond_destroy(&cond);
@@ -33,6 +57,8 @@ int main(int argc, char **argv)
 	printf("mutex destroy\n");
 	sal_mutex_destroy(&mutex);
 
+	printf("thread destroy\n");
+	sal_thread_destroy(&thread);
 	return 0;
 }
 
